kubernetes-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubegen-service
spec:
  selector:
    app: kubeGen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
